# clarionpi

./: .env.example  .gitignore  AGENTS.md  CONTRACTS.md  Makefile  README.md
.claude/: launch.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_ingest_tables.py  0003_extraction_registry.py  0004_auth_sessions.py  0005_gate_service.py  0006_risk_exhibits.py  0007_drafting_compliance.py  0008_draft_snapshot.py  0009_artifact_sets.py  0010_upload_slot_ordinals.py  0011_auth_throttle_and_canonical_email.py  0012_rule_pack_pins.py  0013_derived_state_staleness.py  0014_intake_eligibility_flags.py  0015_billing_service_end_date.py
backend/app/: main.py
backend/app/api/: csrf.py  deps.py  sse_utils.py  view_models.py  wire_guard.py
backend/app/core/: audit.py  auth.py  auth_throttle.py  config.py  db.py  llm_provider.py  llm_telemetry.py  matter_budget.py  matter_logs.py  storage.py  tenancy.py
backend/app/corpus/: ocr.py
backend/app/models/: enums.py  orm.py  schemas.py
backend/app/money/: assemble.py  edits.py  ledger.py  specials.py  types.py
backend/app/package/: __init__.py  artifacts.py  binder.py  build.py  manifest.py  provenance.py
backend/app/rules/: deadlines.py  eligibility.py  errors.py  loader.py
backend/scripts/: generate_fc_fixtures.py  s1_scorer.py  s2_extraction_eval.py  workshop_drive.py
backend/tests/: conftest.py  test_health.py  test_hub.py  test_launch_config.py
backend/tests/api/: conftest.py  test_analysis_api.py  test_auth_api.py  test_csrf.py  test_drafting_api.py  test_evidence_api.py  test_gates_api.py  test_m3_exit_flow.py  test_m4_exit_flow.py  test_m5_exit_flow.py  test_m6_exit_flow.py  test_matters.py  test_package_api.py  test_provenance_api.py  test_rule_pack_pin_boundaries.py  test_sse_utils.py
backend/tests/core/: conftest.py  test_anthropic_provider.py  test_audit.py  test_auth.py  test_auth_throttle.py  test_auth_throttle_concurrency.py  test_config.py  test_llm_provider_scripted.py  test_matter_logs.py  test_metered_client.py  test_storage.py  test_tenancy.py
backend/tests/corpus/: conftest.py  pdf_builders.py  test_classify.py  test_dedup.py  test_documents_api.py  test_extraction_merge.py  test_extraction_windows.py  test_extractors.py  test_ocr.py  test_pages.py  test_phase0.py  test_phase0_extraction.py  test_phase0_integration.py  test_upload_session_concurrency.py  test_upload_sessions.py  test_uploads_api.py
backend/tests/engine/: test_analysis_run.py  test_chronology.py  test_compliance_checks.py  test_compliance_corrections.py  test_compliance_engine.py  test_compliance_judge.py  test_cycle_start.py  test_demand_generation.py  test_drafter.py  test_gate_service.py  test_guards.py  test_idempotency.py  test_invalidation.py  test_machine_exhaustive.py  test_machine_paths.py  test_plan_emit.py  test_registry.py  test_registry_amounts.py  test_registry_bump.py  test_risk_disposition.py  test_risk_engine.py  test_validator_renderer.py
backend/tests/evals/: __init__.py  gold_fixtures.py  test_tier1_anchor_integrity.py  test_tier1_extraction.py  tier1.py
backend/tests/models/: test_auth_migration.py  test_enums.py  test_ingest_tables_smoke.py  test_intake_flags_migration.py  test_m2_tables_smoke.py  test_m4_tables_smoke.py  test_m5_tables_smoke.py  test_migration_baseline.py  test_orm_tenancy_shape.py  test_schemas_roundtrip.py  test_upload_slot_ordinal_migration.py
backend/tests/money/: test_assemble.py  test_edits.py  test_ledger.py  test_specials.py  test_types.py
backend/tests/package/: test_artifacts.py  test_binder.py  test_build.py  test_build_guard.py  test_manifest.py  test_provenance.py
backend/tests/rules/: test_billed_vs_paid.py  test_deadlines.py  test_eligibility.py  test_letter_structure.py  test_pack_authority.py
backend/tests/scripts/: __init__.py  test_s1_scorer.py
backend/tests/workshop/: test_az_mva_scenario.py  test_demo_kit.py
(+291 files in other folders)
