[project]
name = "clarionpi-backend"
version = "0.1.0"
description = "ClarionPI backend — turns personal-injury case files into attorney-approved demand packages."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "sqlalchemy>=2",
    "alembic",
    "pyyaml",
    "python-dateutil",
    "procrastinate",
    "httpx",
    "pdfplumber",
    "pypdfium2",
    "pytesseract",
    "pillow",
    "argon2-cffi",
    # M5 package builder — runtime artifact engines (letter.docx / binder.pdf / chronology.xlsx).
    "python-docx",       # letter.docx authoring
    "pypdf",             # binder collation / page ops
    "openpyxl",          # chronology.xlsx authoring
    "reportlab",         # runtime Bates-overlay engine (moved from dev: it renders the binder overlay)
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "types-PyYAML",
    "hypothesis",
]

[tool.pytest.ini_options]
# `make test` runs `-m "not integration"`; register the marker so an unmarked-vs-marked split is
# explicit (no PytestUnknownMarkWarning) and the fast suite stays deterministic and service-free.
markers = [
    "integration: needs long-running local resources; excluded from the fast suite",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.*"
disallow_untyped_defs = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
